# python-template

./: .deepsource.toml  .gitignore  404.html  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Procfile  README.md  cookiecutter.json  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql-analysis.yml  docs.yml  publish.yml
docs/: index.md
search/: search_index.json
template/: __main__.py  main.py
template/api/v1/: main.py
tests/: test_requirements.py  test_template.py
{{ cookiecutter.project_slug }}/: .coveragerc  .deepsource.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Procfile  README.md  mkdocs.yml  pyproject.toml  requirements.txt  runtime.txt
{{ cookiecutter.project_slug }}/.github/ISSUE_TEMPLATE/: bug_report.md
{{ cookiecutter.project_slug }}/.github/workflows/: ci.yml  codeql-analysis.yml  docs.yml  publish.yml
{{ cookiecutter.project_slug }}/tests/: test_{{ cookiecutter.pkg_name }}.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.pkg_name }}/: __main__.py  main.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.pkg_name }}/api/: main.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.pkg_name }}/api/v1/: main.py
