[tool.poetry]
name = "template"
version = "0.3.1"
description = "Python template with CI/CD ready for production"
authors = ["leynier <leynier41@gmail.com>"]
homepage = "https://github.com/leynier/python-template"
repository = "https://github.com/leynier/python-template"
documentation = "https://github.com/leynier/python-template"
readme = "README.md"
license = "MIT"

[tool.poetry.scripts]
template = "template.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"
fastapi = {extras = ["all"], version = "^0.63.0"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
flake8 = "^3.8.4"
black = "^20.8b1"
isort = "^5.7.0"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
