[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.0.1"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author }} <{{ cookiecutter.email }}>"]
homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.github_repository }}"
repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.github_repository }}"
documentation = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.github_repository }}"
readme = "README.md"
license = "MIT"

[tool.poetry.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.pkg_name }}.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"
fastapi = {extras = ["all"], version = "^0.63.0"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
flake8 = "^3.8.4"
black = "^20.8b1"
isort = "^5.7.0"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
