[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.0.1"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author }} <{{ cookiecutter.email }}>"]
homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.github_repository }}"
repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.github_repository }}"
documentation = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.github_repository }}"
readme = "README.md"
license = "MIT"

[tool.poetry.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.pkg_name }}.main:app"

[tool.poetry.dependencies]
python = "^3.6.14"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
pytest-asyncio = "^0.15.1"
flake8 = "^3.9.2"
black = "^21.7b0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
